wxc/include/ewxw/wxc_glue.h



/* wxRadioBox */
TClassDefExtend(wxRadioBox,wxControl)
TClass(wxRadioBox) wxRadioBox_Create( TClass(wxWindow) _prt, int _id, TString _txt, TRect(_lft,_top,_wdt,_hgt), TArrayString(n, _str), int _dim, int _stl );

void       wxRadioBox_EnableItem( TSelf(wxRadioBox) _obj, int item, TBoolInt enable );

int        wxRadioBox_FindString( TSelf(wxRadioBox) _obj, TStringVoid s );

TStringLen wxRadioBox_GetItemLabel( TSelf(wxRadioBox) _obj, int item, TStringOutVoid _buf );

int        wxRadioBox_GetNumberOfRowsOrCols( TSelf(wxRadioBox) _obj );

int        wxRadioBox_GetSelection( TSelf(wxRadioBox) _obj );

TStringLen wxRadioBox_GetStringSelection( TSelf(wxRadioBox) _obj, TStringOutVoid _buf );

int        wxRadioBox_Number( TSelf(wxRadioBox) _obj );

void       wxRadioBox_SetItemBitmap( TSelf(wxRadioBox) _obj, int item, TClass(wxBitmap) bitmap );

void       wxRadioBox_SetItemLabel( TSelf(wxRadioBox) _obj, int item, TStringVoid label );

void       wxRadioBox_SetNumberOfRowsOrCols( TSelf(wxRadioBox) _obj, int n );

void       wxRadioBox_SetSelection( TSelf(wxRadioBox) _obj, int _n );

void       wxRadioBox_SetStringSelection( TSelf(wxRadioBox) _obj, TStringVoid s );

void       wxRadioBox_ShowItem( TSelf(wxRadioBox) _obj, int item, TBoolInt show );